--- a/src/components/Modal/modal.module.scss
+++ b/src/components/Modal/modal.module.scss
@@ -51,7 +51,7 @@
       margin: 0rem 1rem 2rem 1rem;
       height: 8rem;
       resize: vertical;
-      max-height:30rem;
+      max-height: 30rem;
       padding: 1rem;
       font-family: Arial, Helvetica, sans-serif;
     }
@@ -65,6 +65,18 @@
         border-radius: 0;
         font-size: 1.5rem;
       }
+    }
+  }
+
+  &.error {
+    .content {
+        border: 2px solid $red;
+        .title {
+            background-color: $red;
+        }
+        .description {
+            color: $red;
+        }
     }
   }
 }
